src/components/alignment-control/editor.scss
.maxi-alignment-control {
    .components-base-control__field {
        justify-content: space-between;
        border-radius: 5px;
    }
    .components-radio-control__option {
        opacity: 1 !important;
        min-width: 40px;
        height: 30px;
        background-color: rgba(33, 141, 250, 0);
        font-size: 20px;
        color: #464a53;
        font-weight: 500;
        flex: 1;
        border: 2px solid #dddfe1;
        border-right: 0;

        &:first-of-type {
            border-top-left-radius: 5px;
            border-bottom-left-radius: 5px;
        }
        &:last-of-type {
            border-top-right-radius: 5px;
            border-bottom-right-radius: 5px;
            border-right: 2px solid #dddfe1;
        }

        input {
            display: none;

            &:checked ~ label {
                background-color: #f2f2f2;
                outline: 1px solid transparent;
                position: relative;
                z-index: 1;
            }
        }

        label {
            display: block;
            height: 100%;
        }

        svg {
            display: block;
            height: 100%;
            margin: auto;
            fill: #464a53;
        }
    }
}

